fix alignment of title and model responding text. also update the disclaimer

--- a/ui/src/components/Players/style.scss
+++ b/ui/src/components/Players/style.scss
@@ -14,6 +14,7 @@
 
   .active {
     border-color: var(--border-color-variant);
+    border-width: 4px;
   }
 
   li {
